--- a/GAME__3/styles.css
+++ b/GAME__3/styles.css
@@ -1,107 +1,4 @@
 *, *::after, *::before {
-box-sizing: border-box;
-}
-:root{
-    --cell-size: 100px;
-    --mark-size: calc(var(--cell-size) * .9);
-}
-body{
-    margin: 0;
-}
-.board{
-width: 100vw;
-height: 100vh;
-display: grid;
-justify-content: center;
-align-content: center;
-justify-items: center;
-align-items: center;
-grid-template-columns: repeat(3, auto)
-}
-.cell{
-width: var(--cell-size);
-height: var(--cell-size);
-border: 1px solid rgb(0, 0, 0);
-display: flex;
-justify-content: center;
-align-items: center;
-position: relative;
-cursor: pointer;
-}
-/*used  for removing the border*/
-.cell:first-child,
-.cell:nth-child(2),
-.cell:nth-child(3){
- border-top: none;
-}
- .cell:nth-child(3n + 1){
-    border-left: none;
- }
- .cell:nth-child(3n + 3){
-    border-right: none;
- }
- .cell:last-child,
-.cell:nth-child(8),
-.cell:nth-child(7){
-border-bottom: none;
-}
-/* pseudo elements*/
-.board.x .cell:hover{
-
-}
-.cell.x,
-.cell.circle {
-  cursor: not-allowed;
-}
-
-.cell.x::before,
-.cell.x::after,
-.cell.circle::before {
-  background-color: rgb(0, 0, 0);
-}
-
-.board.x .cell:not(.x):not(.circle):hover::before,
-.board.x .cell:not(.x):not(.circle):hover::after {
-    background-color: lightgrey;
-}
-.cell.x::before,
-.cell.x::after,
-.board.x .cell:not(.x):not(.circle):hover::before,
-.board.x .cell:hover::after {
-    content: '';
-    position: absolute;
-    width: calc(var(--mark-size) * .15);
-    height: var(--mark-size);
-    background-color: black;
-}
-.cell.x::before,
-.board.x .cell:not(.x):not(.circle):hover::before{
-transform: rotate(45deg);
-}
-
-.cell.x::after,
-.board.x .board.x .cell:not(.x):not(.circle):hover::after{
-    transform: rotate(-45deg);
-}
-
-.cell.circle::before,
-.cell.circle::after {
-    content: '';
-    position: absolute;
-    border-radius: 50%;
-}
-.cell.circle::before{
-    width: var(--mark-size);
-    height: var(--mark-size); 
-    background-color: rgb(0, 0, 0);
-}
-.cell.circle::after{
-    width: calc(var(--mark-size) * .7);
-    height: calc(var(--mark-size)* .7); 
-    background-color: rgb(255, 255, 255);
-
-}
-/**, *::after, *::before {
   box-sizing: border-box;
 }
 
@@ -125,7 +22,8 @@ body {
   grid-template-columns: repeat(3, auto)
 }
 
-.cell {
+.cell 
+{
   width: var(--cell-size);
   height: var(--cell-size);
   border: 1px solid black;
@@ -135,7 +33,7 @@ body {
   position: relative;
   cursor: pointer;
 }
-
+/*pseudo class starts here*/
 .cell:first-child,
 .cell:nth-child(2),
 .cell:nth-child(3) {
@@ -239,7 +137,7 @@ body {
 }
 
 .winning-message button:hover {
-  background-color: black;
+  background-color: rgb(0, 0, 0);
   color: white;
   border-color: white;
 }
